--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <main class="main">
                 <div class="toggle-all-container">
                     <input class="toggle-all" type="checkbox" />
-                    <label class="toggle-all-label" for="toggle-all">Mark all as complete</label>
+                    <label data-cy="toggle-all-label" class="toggle-all-label" for="toggle-all">Mark all as complete</label>
                 </div>
                 <ul data-cy="todos-list" class="todo-list"></ul>
             </main>
